--- a/prompter/style.css
+++ b/prompter/style.css
@@ -36,9 +36,15 @@ body {
 }
 
 #bgPrompter.lyricsPrompter {
-    background-image: url('lyricsBg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
+    /*  
+        Original background
+        Replaced by identical manual linear gradient
+
+        background-image: url('lyricsBg.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+    */
+    background: linear-gradient(to right, rgb(74, 193, 254) 1%, rgb(78, 194, 255) 2%, rgb(82, 196, 255) 3%, rgb(87, 198, 254) 4%, rgb(93, 200, 254) 5%, rgb(99, 202, 254) 6%, rgb(106, 204, 254) 7%, rgb(113, 206, 254) 8%, rgb(121, 208, 254) 9%, rgb(128, 211, 254) 10%, rgb(134, 214, 254) 11%, rgb(143, 216, 254) 12%, rgb(150, 219, 254) 13%, rgb(157, 222, 254) 14%, rgb(165, 224, 254) 15%, rgb(172, 227, 254) 16%, rgb(176, 228, 254) 17%, rgb(180, 229, 254) 18%, rgb(184, 230, 254) 19%, rgb(186, 232, 255) 20%, rgb(190, 233, 254) 21%, rgb(194, 234, 254) 22%, rgb(198, 235, 254) 23%, rgb(200, 236, 254) 24%, rgb(204, 237, 254) 25%, rgb(207, 239, 254) 26%, rgb(211, 240, 254) 27%, rgb(214, 241, 253) 28%, rgb(217, 241, 254) 29%, rgb(220, 243, 255) 30%, rgb(223, 244, 254) 31%, rgb(226, 244, 253) 32%, rgb(228, 246, 254) 33%, rgb(231, 246, 255) 34%, rgb(234, 248, 254) 35%, rgb(236, 248, 254) 36%, rgb(239, 249, 254) 37%, rgb(241, 250, 254) 38%, rgb(241, 251, 253) 39%, rgb(244, 251, 254) 40%, rgb(247, 251, 255) 41%, rgb(248, 252, 255) 42%, rgb(249, 253, 255) 43%, rgb(251, 253, 254) 44%, rgb(252, 253, 255) 45%, rgb(253, 254, 254) 46%, rgb(254, 254, 254) 47%, rgb(254, 254, 254) 48%, rgb(255, 255, 255) 49%, rgb(255, 255, 255) 50%, rgb(255, 255, 255) 51%, rgb(255, 255, 255) 52%, rgb(254, 254, 254) 53%, rgb(254, 254, 254) 54%, rgb(253, 254, 254) 55%, rgb(252, 253, 255) 56%, rgb(251, 253, 254) 57%, rgb(249, 253, 255) 58%, rgb(248, 252, 255) 59%, rgb(247, 251, 255) 60%, rgb(244, 251, 254) 61%, rgb(241, 251, 253) 62%, rgb(241, 250, 254) 63%, rgb(239, 249, 254) 64%, rgb(236, 248, 254) 65%, rgb(234, 248, 254) 66%, rgb(231, 246, 255) 67%, rgb(228, 246, 254) 68%, rgb(226, 244, 253) 69%, rgb(223, 244, 254) 70%, rgb(220, 243, 255) 71%, rgb(217, 241, 254) 72%, rgb(214, 241, 253) 73%, rgb(211, 240, 254) 74%, rgb(207, 239, 254) 75%, rgb(204, 237, 254) 76%, rgb(200, 236, 254) 77%, rgb(198, 235, 254) 78%, rgb(194, 234, 254) 79%, rgb(190, 233, 254) 80%, rgb(186, 232, 255) 81%, rgb(184, 230, 254) 82%, rgb(180, 229, 254) 83%, rgb(176, 228, 254) 84%, rgb(172, 227, 254) 85%, rgb(165, 224, 254) 86%, rgb(157, 222, 254) 87%, rgb(150, 219, 254) 88%, rgb(143, 216, 254) 89%, rgb(134, 214, 254) 90%, rgb(128, 211, 254) 91%, rgb(121, 208, 254) 92%, rgb(113, 206, 254) 93%, rgb(106, 204, 254) 94%, rgb(99, 202, 254) 95%, rgb(93, 200, 254) 96%, rgb(87, 198, 254) 97%, rgb(82, 196, 255) 98%, rgb(78, 194, 255) 99%, rgb(74, 193, 254) 100%);
 }
 
 #bgPrompter.blackwhite {
