--- a/prompter/style.css
+++ b/prompter/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'LyricsFont';
+    src: url('fonts/dutch.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -51,13 +58,6 @@ body {
     background-color: #000;
 }
 
-@font-face {
-    font-family: 'LyricsFont';
-    src: url('fonts/dutch.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
-}
-
 #prompter-content {
     position: absolute;
     left: 0;
@@ -73,6 +73,8 @@ body {
     user-select: none;
     white-space: pre-line;
     word-wrap: break-word;
+    max-width: 70vw; 
+    width: 100vw;
 }
 
 .lyricsPrompter #prompter-content {
@@ -151,9 +153,9 @@ body {
     display: none;
     position: absolute;
     margin-top: 1rem;
-    top: 30%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -35%);
+    transform: translate(-50%, -50%);
 }
 
 h5 {
@@ -171,9 +173,7 @@ th {
 
 .form-control:focus {
     box-shadow: none;
-    /* Remove box shadow */
     border-color: #ced4da;
-    /* Optional: Reset border color */
 }
 
 #search {
