--- a/assets/css/prompter.css
+++ b/assets/css/prompter.css
@@ -76,8 +76,9 @@ body {
     user-select: none;
     white-space: pre-line;
     word-wrap: break-word;
-    max-width: 70vw; 
-    width: 100vw;
+    min-width: 30vw;
+    width: 70vw; 
+    max-width: 100vw;
 }
 
 .lyricsPrompter #prompter-content {
