--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -120,6 +120,17 @@ body {
     cursor: pointer;
 }
 
+#image-btn {
+    user-select: none;
+    margin-right: 10px;
+    background-color: #306030;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 #button-div {
     user-select: none;
     margin-left: 20px;
